# metabolic-protocols

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ishmael-cod-chowder.md  pyproject.toml
.claude/: settings.local.json
docs/: 0000-GUIDE.md
src/protocols/: blueberry-compote.md  cloud-bread.md  creamy-scrambled-eggs.md  croque-madame-baked-eggs.md  double-turkey-stuffing.md  green-bean-casserole.md  herb-compound-butter.md  pecan-cheesecake.md  turkey-bone-broth.md  wild-turkey-pate.md  zero-carb-chaffle.md
